# my-cli-notes

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
src/: cli.py  utils.py
src/commands/: __init__.py  add.py  list.py  search.py
tests/: test_add.py  test_add_improved.py  test_list.py  test_search.py
